# C_piscine

./: .gdbinit  .gitignore  CMakeLists.txt
c00/: CMakeLists.txt
c00/ex00/: ft_putchar.c
c00/ex01/: ft_print_alphabet.c
c00/ex02/: ft_print_reverse_alphabet.c
c00/ex03/: ft_print_numbers.c
c00/ex04/: ft_is_negative.c
c00/ex05/: ft_print_comb.c
c00/ex06/: ft_print_comb2.c
c00/ex07/: ft_putnbr.c
c00/ex08/: ft_print_combn.c
c00/include/: c00.h  c00_tests.h  comb2_test_data.h  combn_test_data.h
c00/src/: main.c
c00/src/tests/: ft_is_negative_test.c  ft_print_alphabet_test.c  ft_print_comb2_test.c  ft_print_comb_test.c  ft_print_combn_test.c  ft_print_numbers_test.c  ft_print_reverse_alphabet_test.c  ft_putchar_test.c  ft_putnbr_test.c
c00/src/utils/: ft_mem.c  ft_print_title.c  ft_putstr.c  ft_strcmp.c  ft_strlen.c
c01/: CMakeLists.txt
c01/ex00/: ft_ft.c
c01/ex01/: ft_ultimate_ft.c
c01/ex02/: ft_swap.c
c01/ex03/: ft_div_mod.c
c01/ex04/: ft_ultimate_div_mod.c
c01/ex05/: ft_putstr.c
c01/ex06/: ft_strlen.c
c01/ex07/: ft_rev_int_tab.c
c01/ex08/: ft_sort_int_tab.c
c01/include/: c01.h
c01/tests/: c01_test.h  ft_div_mod_test.c  ft_ft_test.c  ft_print_title.c  ft_putstr_test.c  ft_rev_int_tab_test.c  ft_sort_int_tab_test.c  ft_strlen_test.c  ft_swap_test.c  ft_ultimate_div_mod_test.c  ft_ultimate_ft_test.c  main.c
c02/: CMakeLists.txt
c02/ex00/: ft_strcpy.c
c02/ex01/: ft_strncpy.c  ft_strncpy2.c
c02/ex02/: ft_str_is_alpha.c
c02/ex03/: ft_str_is_numeric.c
c02/ex04/: ft_str_is_lowercase.c
c02/ex05/: ft_str_is_uppercase.c
c02/ex06/: ft_str_is_printable.c
c02/ex07/: ft_strupcase.c
c02/ex08/: ft_strlowcase.c
c02/ex09/: ft_strcapitalize.c
c02/ex10/: ft_strlcpy.c
c02/ex11/: ft_putstr_non_printable.c
c02/ex12/: ft_print_memory.c
c02/include/: c02.h  c02_tests.h
c02/src/: main.c
c02/tests/: c02_test.h  ft_print_memory_test.c  ft_putstr_non_printable_test.c  ft_str_is_alpha_test.c  ft_str_is_lowercase_test.c  ft_str_is_numeric_test.c  ft_str_is_printable_test.c  ft_str_is_uppercase_test.c  ft_strcapitalize_test.c  ft_strcpy_test.c  ft_strlcpy_test.c  ft_strlowcase_test.c  ft_strncpy_test.c  ft_strupcase_test.c  main.c
c03/: CMakeLists.txt  Makefile
c03/ex00/: Makefile  ft_strcmp.c  main.c
c03/ex01/: Makefile  ft_strncmp.c
c03/ex02/: ft_strcat.c
c03/ex03/: ft_strncat.c
c03/ex04/: ft_strstr.c  main.c
c03/ex05/: ft_strlcat.c  main.c
c03/include/: c03.h  c03_tests.h
c03/src/: main.c
c03/tests/: c03_test.h  ft_strcat_test.c  ft_strcmp_test.c  ft_strlcat_test.c  ft_strncat_test.c  ft_strncmp_test.c  ft_strstr_test.c  main.c
c04/: CMakeLists.txt
c04/ex00/: ft_strlen.c
c04/ex01/: ft_putstr.c  ft_putstr_test.c
c04/ex02/: ft_putnbr.c  main.c
c04/ex03/: ft_atoi.c  main.c
c04/ex04/: ft_putnbr_base.c
c04/ex05/: ft_atoi_base.c
c04/include/: c04.h
c04/tests/: c04_test.h  ft_atoi_base_test.c  ft_atoi_test.c  ft_print_title.c  ft_putnbr_base_test.c  ft_putnbr_test.c  ft_putstr_test.c  main.c
c05/: CMakeLists.txt
c05/ex00/: ft_iterative_factorial.c
c05/ex01/: ft_recursive_factorial.c
c05/ex02/: ft_iterative_power.c
c05/ex03/: ft_recursive_power.c
c05/ex04/: ft_fibonacci.c
c05/ex05/: ft_sqrt.c
c05/ex06/: ft_is_prime.c
c05/ex07/: ft_find_next_prime.c
c05/ex08/: ft_ten_queens_puzzle.c
c05/include/: c05.h
c05/tests/: c05_test.h  ft_fibonacci_test.c  ft_find_next_prime_test.c  ft_is_prime_test.c  ft_iterative_factorial_test.c  ft_iterative_power_test.c  ft_recursive_factorial_test.c  ft_recursive_power_test.c  ft_sqrt_test.c  ft_ten_queens_puzzle_test.c  main.c
c06/: CMakeLists.txt
c06/ex00/: ft_print_program_name.c
c06/ex01/: ft_print_params.c
c06/ex02/: ft_rev_params.c
c06/ex03/: ft_sort_params.c
c07/: CMakeLists.txt
c07/ex00/: ft_strdup.c
c07/ex01/: ft_range.c
c07/ex02/: ft_ultimate_range.c
c07/ex03/: ft_strjoin.c
c07/ex04/: ft_convert_base.c  ft_convert_base2.c
c07/ex05/: ft_split.c
c07/include/: c07.h  libft.h
c07/src/: main.c
c07/tests/: c07_tests.h  ft_free_tab.c  ft_get_tab_size.c  main.c  test1.c
c08/: CMakeLists.txt
c08/ex00/: ft.h
c08/ex01/: ft_boolean.h
c08/ex02/: ft_abs.h
c08/ex03/: ft_point.h
c08/ex04/: ft_strs_to_tab.c
c08/ex05/: ft_show_tab.c
c08/include/: c08.h  ft_abs.h  ft_boolean.h  ft_point.h  ft_stock_str.h
c08/src/: main.c
c08/tests/: c08_tests.h  ft_boolean_test.c  ft_free_tab.c  ft_get_tab_size.c  ft_point_test.c  ft_strlen.c  ft_strs_to_tab_test.c  main.c
c09/ex00/: ft_putchar.c  ft_putstr.c  ft_strcmp.c  ft_strlen.c  ft_swap.c  libft_creator.sh
c10/: CMakeLists.txt
c10/ex00/: CMakeLists.txt  Makefile
c10/ex00/include/: ft.h
c10/ex00/lib/ft/ft_libio/: Makefile.mk  ft_putchar.c  ft_putstr.c
c10/ex00/lib/ft/ft_string/: Makefile.mk
c10/ex00/lib/ft/include/: ft.h
c10/ex00/src/: main.c
c10/ex00/test/: map1.txt
c10/ex03/: Makefile
c10/ex03/lib/ft/: Makefile
c10/ex03/lib/ft/ft_string/: ft_strlen.c
c10/include/: c10.h  c10_tests.h
c10/src/: main.c
c10/src/utils/: ft_calloc.c  ft_list_append.c  ft_list_has_next.c  ft_list_prepend.c  ft_range.c  ft_split.c  ft_strlowcase.c
c11/: CMakeLists.txt
c11/ex00/: ft_foreach.c
c11/ex01/: ft_map.c
c11/ex02/: ft_any.c
c11/ex03/: ft_count_if.c
c11/ex04/: ft_is_sort.c
c11/ex05/: CMakeLists.txt
c11/ex05/include/: do-op.h
c11/ex05/lib/: ft_putstr.c  ft_strlen.c
c11/ex05/src/: main.c
c11/ex06/: ft_sort_string_tab.c
c11/ex07/: ft_advanced_sort_string_tab.c
c11/include/: c11.h  c11_tests.h
c11/src/: main.c
c11/src/tests/: ft_advanced_sort_string_tab_test.c  ft_any_test.c  ft_count_if_test.c  ft_foreach_test.c  ft_is_sort_test.c  ft_map_test.c  ft_sort_string_tab_test.c
c11/src/utils/: ft_bzero.c  ft_calloc.c  ft_free_tab.c  ft_get_tab_size.c  ft_isctype.c  ft_memcpy.c  ft_memset.c  ft_print_int_tab.c  ft_print_str_tab.c  ft_print_title.c  ft_putstr.c  ft_range.c  ft_split.c  ft_str_is_alpha.c  ft_str_is_printable.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c
c12/: CMakeLists.txt  Makefile  README.md
c13/: CMakeLists.txt
(+144 files in other folders)
